# levanter

./: .dockerignore  .flake8  .gitignore  .nfs000000000000e1a00000e76c  .pre-commit-config.yaml  .readthedocs.yaml  405b_foward.md  AGENTS.md  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  PREDEFINED_PERMUTATION_USAGE.md  README.md  analyze.py  analyze_cfx.ipynb  data.txt  debug.sh  debug2.sh  debug_jit_log.py  dolma_1b.yaml  dolma_mixture_1b.yaml  error_loading_model.sh  execute_submit_ray_job.sh  gpt_oss_checkpoint.md  hf_gpt_oss.py  inference_hf.py  install_local_haliax.md  installgcs.sh  launch_interactive_tpu.sh  launch_job.sh  llama.py  llama2_hf_convert.yaml  llama_1b_to_hf.yaml  make_perm_indices.ipynb  mkdocs.yml  nohup.out  olmo_run.sh  original_sliding_tp.py  (+40 more)
.agents/projects/: inference.md  multi_host_inference.md
.devcontainer/: README.md
.devcontainer/nvidia/: devcontainer.json  post-create.sh
.github/workflows/: check_lockfile.yaml  docker-base-image.yaml  docker-cluster-image.yaml  gpt2_small_itest.yaml  launch_small_fast.yaml  publish_dev.yaml  run_entry_tests.yaml  run_pre_commit.yaml  run_ray_tests.yaml  run_tests.yaml  tpu_unit_tests.yaml
.playbooks/: port-models.md
.projects/: unified-checkpoints.md
analysis/: compare_marin_to_olmo.py  count_data_mixture.py  simulate_data_mixture.py  wandb_metrics.py  wandb_parse_runs.py
cache/train/: 0.json  0.json.bak  1.json  1.json.bak  2.json  2.json.bak  3.json  3.json.bak  4.json  4.json.bak  5.json  5.json.bak  6.json  6.json.bak  7.json  7.json.bak  cache_ledger.json
cache/validation/: 0.json  0.json.bak  cache_ledger.json
config/: _gpu.yaml  _gpu_1B.yaml  _gpu_paloma.yaml  _gpu_sphinx.yaml  _tpu.yaml  _tpu_1B.yaml  _tpu_old.yaml  _tpu_on_pod-c1.yaml  _tpu_on_pod-west4.yaml  _tpu_on_pod.yaml  _tpu_paloma.yaml  _tpu_west.yaml  audio_nano.yaml  audio_small.yaml  audio_small_export.yaml  audio_small_mmvocab.yaml  audio_small_sophia.yaml  backpack.yaml  backpack_gpt2_large.yaml  backpack_nano.yaml  biomedlm_v2_poc.yaml  config-markweb-web_comparison-owt_1b.yaml  config-markweb-web_comparison_pile_1b.yaml  convert_llama3_1b.yaml  debug.yaml  debug_pack_sft.yaml  debug_sft.yaml  distill_llama3_8b.yaml  distill_llama3_tiny.yaml  diva_flash.yaml  dpo_test.yaml  dpo_with_kl_penalty.yaml  eval_gpt2_1536_legal.yaml  eval_llama3.1_70b_sliding.yaml  eval_llama3_sliding.yaml  for_codellama_7b_arxiv.yaml  for_codellama_7b_books2.yaml  for_codellama_7b_books3.yaml  for_codellama_7b_dm_math.yaml  for_codellama_7b_enron.yaml  (+261 more)
config/books/: eval_llama3.1_8b.yaml  (+13 more)
docs/: Add-Models.md  Alpaca-LoRA.md  Announcement-Post.md  Blog-Post.md  Configuration-Guide.md  DPO-KL-Penalty.md  Fine-Tuning.md  Getting-Started-CUDA.md  Getting-Started-GPU.md  Getting-Started-TPU-VM.md  Getting-Started-Training.md  Haliax.md  Hardware-Agnostic-Training.md  Installation.md  Levanter-1.0-Release.md  LoRA.md  Overview.md  Performance-Guide.md  Port-Models.md  Replicating-Alpaca.md  Training-On-Your-Data.md  Training.md  announce-post.md  faq.md  gpt_oss.md  haliax_cheatsheet.md  index.md  peft_inference.ipynb  release-notes.md  requirements.txt
ema/: callbacks.py  eval.py  llama2_100M_constant_lr2e-3.yaml  trainer.py  trainer_state.py
etc/: license_header.txt
examples/: alpaca-llama2.yaml  alpaca-lora-llama2.yaml  alpaca-lora.yaml  alpaca.py  alpaca.yaml  alpaca_lora.py  backpack_example.py  convert_backpack_to_hf.py  convert_gpt2_to_hf.py  convert_mpt_to_hf.py  count_tokens.py  debug_pjit.py  example.py  gpt2_eval.py  gpt2_example.py  gpt2_norm_check.py  gpt2_viz_logprobs.py  longformer_scale_test.py  mpt_continued_training.py  mpt_eval.py  named_gpt2_example.py  nom_gpt2_example.py  palm_example.py  pjit_gpt2_example.py  profile_model.py  raw_longformer.py  shape_exploration.ipynb  sharded_gpt2_example.py  toy_pjit.py  toy_xmap.py  train-alpaca.yaml  ya_example.py
infra/: babysit-tpu-vm  babysit-tpu-vm-ema.sh  babysit-tpu-vm.sh  launch.py  launch.sh  launch_on_ray.py  push_docker.py  run-slurm.sh  run.sh  setup-tpu-vm-nfs.sh  setup-tpu-vm.sh  spin-up-vm.sh
launch_scripts/: 1b_llama_v4.sh  1b_llama_v4_long_job.sh  1b_llama_v5.sh  1b_llama_v5_eu.sh  launch_tmux_v4.sh  launch_tmux_v5.sh  launch_tmux_v5_eu.sh
ray_scripts/: ray_tpu.py  ray_tpu_actor.py  ray_tpu_task.py  readme.md
scratch/: tiled_transpose.py
scripts/: babysit-tpu-vm.sh  cache_dataset.py  cache_dataset_ray.py  cache_legal_dataset.py  cfx.sbatch  cfx2.sbatch  clean_old_checkpoints.py  fabfile.py  fabric.yml  gcs_bulk_delete.py  get_files_on_gcs.py  gpt2_token.py  launch-raw.sh  launch.sh  launch_gpt2_small_fast_gpu.sh  launch_gpt2_small_fast_supervised_tpu.sh  launch_gpt2_small_fast_tpu.sh  launch_gpt2_small_itest_tpu.sh  launch_gpt2_tiny_sweep_worker.sh  launch_llama_small_fast_supervised_tpu.sh  loss_history.py  quant_infer.py  repair_cache.py  repro_crash.sh  run-slurm.sh  run.sh  run_cfx.sh  run_gpt.py  setup-env.sh  setup-tpu-vm.sh  setup_wandb_workspace.py  shuffle_split.sh  single_infer.py  smooth.sbatch  spin-up-vm.sh  split-pile-shards.py  split-pile-shards.sh  tpu_transfer_benchmark.py  train_tokenizer.py  wandb_sweep_agent.py  (+1 more)
src/: py_utils.py  testing2.ipynb
sweep_config/: tiny_sweep.yaml
tests/: checkpoint_test.py  conftest.py  gpt2_test.py  gpt2_tokenizer_config.json  haliax_core_test.py  hapax_core_test.py  jax_utils_test.py  llama_test.py  llama_tokenizer_config.json  named_array_core_test.py  requirements.txt  test_activation.py  test_actor_pool.py  test_attention.py  test_audio.py  test_background_iterable.py  test_backpack.py  test_checkpoint.py  test_col_tree_store.py  test_config.py  test_data_mixture.py  test_datetime_utils.py  test_distributed.py  test_doremi.py  test_dpo_kl_penalty.py  test_eval_harness.py  test_eval_lm.py  test_export_to_hf.py  test_factorized_llama.py  test_flash_attention.py  test_fsspec_safetensor.py  test_gemma.py  test_generation_service.py  test_global_batch_dataset.py  test_gpt_oss.py  test_grad_accum.py  test_grad_checkpointing.py  test_haliax_hof.py  test_hero.py  test_hf_checkpoints.py  (+84 more)
(+455 files in other folders)
